0MQ version 4.3.1 stable, released on 20xx/xx/xx
================================================

* The following DRAFT APIs have been marked as STABLE and will not change
  anymore:
  - ZMQ_MSG_T_SIZE context option (see doc/zmq_ctx_get.txt)


0MQ version 4.2.4 stable, released on 2018/03/21
================================================

* New DRAFT (see NEWS for 4.2.0) socket options:
  - ZMQ_LOOPBACK_FASTPATH to enable faster TCP loopback on Windows
  - ZMQ_METADATA to set application-specific metadata on a socket
  See doc/zmq_setsockopt.txt and doc/zmq_getsockopt.txt for details.

* New DRAFT (see NEWS for 4.2.0) context options:
  - ZMQ_ZERO_COPY_RECV to disable zero-copy receive to save memory
    at the expense of slower performance
  See doc/zmq_ctx_set.txt and doc/zmq_ctx_get.txt for details.

* New DRAFT API zmq_stopwatch_intermediate which returns the time
  elapsed without stopping the stopwatch.

* TIPC: support addressing TIPC Port Identity addresses.

* Added CMake option to disable tests: BUILD_TESTS

* Added CMake and autotools make targets to support clang-formatter:
  make clang-format, clang-format-check and clang-format-diff to
  help developers make sure their code conforms to the style guidelines

* For distributors: a new test framework has been added, which
  includes a copy of the Unity source code. This source code library is
  distributed under the MIT license and thus is compatible with
  libzmq's LGPL3.

* Fixed #2867 - add ZeroMQConfig.cmake.in to distributable tarball

* Fixed #2868 - fix OpenBSD build

* Fixed #2870 - fix VC++ 11.0 (VS2012) build

* Fixed #2879 - prevent duplicate connections on PUB sockets

* Fixed #2872 - fix CMake tests on Windows

* Fixed #2895 - fix assert on Windows with POLL

* Fixed #2920 - fix Windows build with Intel compiler

* Fixed #2930 - use std::atomic when available with VC++ and VS2015

* Fixed #2910 - fix race condition with ZMQ_LINGER socket option
